# django-dos

./: .gitignore  Dockerfile  docker-compose-local.yml  docker-compose.yml  pyproject.toml
nginx/: django.conf
src/config/: settings.py
