[tool.poetry]
name = "django-dos"
version = "0.1.0"
description = ""
authors = ["llorenss <lorens32645@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.10"
django = "~3.2"
djangorestframework = "~3.14"
psycopg2-binary = "^2.9.6"
python-decouple = "^3.8"
gunicorn = "^20.1.0"
django-extensions = "^3.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
